--- a/usid-sl-cevo.yml
+++ b/usid-sl-cevo.yml
@@ -5,22 +5,25 @@ topology:
     s1:
       kind: juniper_cjunosevolved
       image: cjunosevolved:25.2R1.8-EVO   # use whatever tag you loaded via `docker load`
-      startup-config:s1.conf
+      startup-config: s1.conf
       env:
         CPTX_COSIM: "BX"                  # BX=PTX10002-36QDD, BT=PTX10001-36MR
     s2:
       kind: juniper_cjunosevolved
       image: cjunosevolved:25.2R1.8-EVO
+      startup-config: s2.conf
       env:
         CPTX_COSIM: "BX"
     l1:
       kind: juniper_cjunosevolved
       image: cjunosevolved:25.2R1.8-EVO   # use whatever tag you loaded via `docker load`
+      startup-config: l1.conf
       env:
         CPTX_COSIM: "BX"                  # BX=PTX10002-36QDD, BT=PTX10001-36MR
     l2:
       kind: juniper_cjunosevolved
       image: cjunosevolved:25.2R1.8-EVO
+      startup-config: l2.conf
       env:
         CPTX_COSIM: "BX"
 
